--- a/web_avatar_chat/templates/index.html
+++ b/web_avatar_chat/templates/index.html
@@ -37,10 +37,25 @@
     </div>
 
     <div class="avatar-panel">
-        <div class="avatar-display">
-            <h2>🤖</h2>
-            <p>Avatar Bereit</p>
-            <small>Verbunden mit NeuroSync Server<br>Echtzeit-Gesichtsanimation aktiviert</small>
+        <div class="avatar-header">
+            <h2>🤖 Live Avatar</h2>
+            <p>NeuroSync Pixel Streaming</p>
+        </div>
+
+        <!-- PIXEL STREAMING IFRAME -->
+        <div class="pixel-stream-container">
+            <iframe id="pixelStreamIframe"
+                    src="http://148.251.21.122/"
+                    width="100%"
+                    height="100%"
+                    frameborder="0"
+                    allow="microphone; camera; autoplay">
+            </iframe>
+        </div>
+
+        <div class="avatar-controls">
+            <button onclick="toggleStream()">📹 Stream Toggle</button>
+            <button onclick="resetStream()">🔄 Reset</button>
         </div>
     </div>
 
