--- a/web_avatar_chat/templates/index.html
+++ b/web_avatar_chat/templates/index.html
@@ -52,7 +52,7 @@
         <!-- PIXEL STREAMING IFRAME -->
         <div class="pixel-stream-container">
             <iframe id="pixelStreamIframe"
-                    src="http://148.251.21.122/"
+                    src="https://avatar.aura42.de/"
                     width="100%"
                     height="100%"
                     frameborder="0"
